2013-09-11  Simon Cook  <simon.cook@embecosm.com>

	* testsuite/Makefile.am: Initilize DejaGnu based test suite.
	* testsuite/Makefile.in: Generated.
	* testsuite/config/unix.exp: Added blank tool config file.
	* testsuite/lib/mageec.exp: Added blank tool init file.
	* testsuite/mageec.tests/Makefile.am: Add test to distribution.
	* testsuite/mageec.tests/Makefile.in: Generated.
	* testsuite/mageec.tests/hash.exp: Add mageechash tests.
	* testsuite/mageec.tests/test.elf: Add test known ELF executable.
	* configure.ac: Add testsuite Makefiles to AC_OUTPUT.
	* configure: Regenerated.
	* Makefile.am: Add testsuite subdirectory.
	* Makefile.in: Regenerated.

2013-09-11  Simon Cook  <simon.cook@embecosm.com>

	* include/mageec-ml.h: Finish machine learner interface.

2013-09-03  Simon Cook  <simon.cook@embecosm.com>

	* mageec/mageechash.cpp (main): Only display hash output if no error
	generating hash.

2013-08-21  James Pallister  <james.pallister@embecosm.com>

	* include/mageec-ml.h (add_result): Correct use of mageec_feature,
	mageec_flag.
	* ml/ml.c (add_result): Likewise.

2013-08-21  Simon Cook  <simon.cook@embecosm.com>

	* include/elfhash.h: Define hashedelf::ignoredsection.
	* include/elfhash.cpp: Likewise.

2013-08-21  Simon Cook  <simon.cook@embecosm.com>

	* include/elfhash.h: Define hashedelf.
	* mageec/elfhash.cpp: Define hashedelf class implementation.
	* mageec/mageechash.cpp: Added command line interface to hashedelf.
	* mageec/Makefile.am: Build mageechash, add elfhash to libmageec.
	* mageec/Makefile.in: Regenerated.
	* Makefile.am: Include elfhash.h with distribution.
	* Makefile.in: Regenerated.
	* configure.ac: Add test for libelf and libgcrypt.
	* configure: Regenerated.

2013-08-14  Simon Cook  <simon.cook@embecosm.com>

	* doc/Doxyfile.in: Add Doxygen documentation.
	* doc/mageec_logo.png: Add logo for Doxygen documentation.
	* gcc_plugin/gcc-callbacks.cpp: Add placeholder GCC Plugin callbacks.
	* gcc_plugin/gcc-plugin.cpp: Initial plugin.